--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="./jquery-latest.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </head>
